fixed sidebar z-index to 999 so it goes over everything exept the close button

--- a/my-app/src/components/pageHeader/pageHeader.css
+++ b/my-app/src/components/pageHeader/pageHeader.css
@@ -7,7 +7,7 @@
     box-shadow: 2px 2px 2px #00000055;
 
 }
-.page--header_container h1{
+.page--header_container h2{
     margin: 0;
     padding: 0;
     
