--- a/my-app/src/components/sidebar/sidebar.css
+++ b/my-app/src/components/sidebar/sidebar.css
@@ -107,10 +107,11 @@ text-decoration: none;
       left: 0;
       border-radius: 0;
       transition:  0.5s ease-in-out; 
-      left: -105%;
+        z-index: 999;
+        left: -105%;
     }
     .sidebar--container.open {
-        left:0
+        left:0;
       }
     .sidebar--nav_container {
       flex-direction: column;
